# mlx-ash-kv

./: DESCRIPTION.md  README.md  app.py  pyproject.toml  requirements.txt
examples/: self_healing_llama.py
models/mock_critic.mlpackage/: Manifest.json
models/mock_critic.mlpackage/Data/com.apple.CoreML/: model.mlmodel
scripts/: build_ane_critic.py  publish_benchmarks.py
src/mlx_ash_kv/: __init__.py  api.py  cache.py  cli.py  critic.py  monitor.py
src/mlx_ash_kv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mlx_ash_kv/hal/: factory.py
tests/ash_kv/: benchmark.py  live_llm_override.py  multi_agent_swarm.py
