[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-ash-kv"
version = "8.0.0"
description = "ASH-KV: Multi-Layer Memory Hypervisor, Native mlx_lm Override, and Head-Specific Causal Pruning."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mlx>=0.18.0",
    "mlx-lm",
    "rich",
    "numpy",
    "coremltools",
    "torch"
]

[tool.setuptools]
packages = ["mlx_ash_kv"]
package-dir = {"" = "src"}
.0.0** is an enterprise-grade memory infrastructure for Large Language Models on Apple Silicon. It introduces the **Multi-Layer Memory Hypervisor**, enabling live "brain transplants" on production LLMs (like Llama-3) to provide real-time causal correction and infinite context loops.

---

## 🚀 Breakthrough: Native LLM Override (Phase 6)

In v8.0.0, ASH-KV moves beyond benchmarking. We now provide the infrastructure to hijack the `mlx_lm` inference pipeline and replace its static KV cache with our self-healing manifold.

### 🧠 Multi-Layer Memory Hypervisor
1.  **Direct Silicon Interception:** ASH-KV intercepts the LLM forward pass, injecting a 4D head-specific attention mask into all 32 layers of the model.
2.  **Live Brain Surgery:** The **Asynchronous Verification Daemon (AVD)** monitors the live output stream. When it detects logical drift, it surgically prunes the reasoning heads *while the model is typing*.
3.  **Real-Time Compaction:** If the LLM hits a natural pause (period, newline), the **EDCC** engine vaporizes dead nodes across all 32 layers instantly, physically reclaiming RAM without stopping generation.

---

## 🧪 Quick Start: Live Override

### 1. Build the ANE Critic
```bash
python3 scripts/build_ane_critic.py
```

### 2. Run the Live Override (Llama-3)
```bash
export PYTHONPATH=$PYTHONPATH:$(pwd)/src
python3 tests/ash_kv/live_llm_override.py
```

---

## 📊 Diagnostics & Visualization

### Terminal Hardware Monitor (TUI)
```bash
export PYTHONPATH=$PYTHONPATH:$(pwd)/src
python3 tests/ash_kv/benchmark.py
```

---

## 🛡️ License
Apache 2.0. Built for the future of agentic reasoning on Apple Silicon.
