[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-ash-kv"
version = "8.2.0"
description = "Asynchronous Self-Healing KV Cache for Silicon-Native LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.18.0",
    "numpy",
    "rich",
    "coremltools",
    "gradio",
    "mlx-lm",
    "torch"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "build",
    "twine"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ash-kv = "mlx_ash_kv.cli:main"
