[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-ash-kv"
version = "8.3.0"
description = "Asynchronous Self-Healing KV Cache for Silicon-Native LLMs by GDI Nexus"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "GDI Nexus", email = "contactus@gdinexus.com"}
]
keywords = [
    "mlx", "llm", "kv-cache", "self-healing", "apple-silicon", 
    "neural-engine", "cuda", "pytorch", "varentropy", "attention-masking"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "mlx>=0.18.0",
    "numpy",
    "rich",
    "coremltools",
    "gradio",
    "mlx-lm",
    "torch"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "build",
    "twine"
]

[project.urls]
"Homepage" = "https://gdinexus.com"
"Repository" = "https://github.com/iamrealvinnu/mlx-ash-kv"
"Bug Tracker" = "https://github.com/iamrealvinnu/mlx-ash-kv/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ash-kv = "mlx_ash_kv.cli:main"


